--- a/app/diseases/index.html
+++ b/app/diseases/index.html
@@ -6,7 +6,7 @@
         </div>
         <div id="content">
            <div class="line">
-              <div class="margin" style="margin: 3%;">
+              <div class="margin" >
                  <div class="s-12 m-6 l-4"  ng-repeat="disease in vm.diseases" >
                     <div class="content-block margin-bottom">
                        <i class="icon-paperplane_ico icon2x"></i>
