--- a/app/account/index.html
+++ b/app/account/index.html
@@ -7,6 +7,9 @@
         <div id="content" class="left-align contact-page">
            <div class="line" style="margin: 2%;">
               <div class="margin">
+                <div class="flash-message" ng-if="flash">
+                  <div class="{{'alert alert-' + flash.type}}" ng-bind="flash.message"></div>
+                </div>
                  <div class="s-12 l-4">
                    <div class="form-container">
                        <form method="post">
@@ -40,10 +43,10 @@
                                          <form method="post">
                                              <div class="form-group">
                                                <label for="value">Value</label>
-                                               <input type="text" class="form-control" name="value" placeholder="Enter value" ng-model="vm.pressure.value">
+                                               <input type="text" id="value" class="form-control" name="value" placeholder="Enter value" ng-model="vm.pressure.value">
                                              </div>
                                              <div class="form-group">
-                                                 <button  type="submit" ng-click="vm.savePressure()" class="button">Add value</button>
+                                                 <button  id= "save_value" type="submit" ng-click="vm.savePressure()" class="button">Add value</button>
                                              </div>
                                          </form>
                                      </div>
